# peerproof-soroban-web-ide

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  nx.json  package-lock.json  package.json  pyproject.toml  workspace.json
apps/soroban-ide/: index.html  package-lock.json  package.json  proxy_server.py  serve.py  simple_server.py  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/soroban-ide/public/: .gitkeep
apps/soroban-ide/src/: App.tsx
apps/soroban-ide/src/components/: AccountPanel.tsx  BuildOutput.tsx  DeployPanel.tsx  FileTree.tsx  MonacoEditor.tsx  RunPanel.tsx
apps/soroban-ide/src/hooks/: useStellar.ts  useWebSocket.ts
apps/soroban-ide/src/services/: api.ts
apps/soroban-ide/src/styles/: globals.css
apps/soroban-ide/src/types/: index.ts
sample-contracts/hello_world/: Cargo.toml
sample-contracts/hello_world/src/: lib.rs
